<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/album"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AppActivity">

    <TextView
        android:id="@+id/albumTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#808080"
        android:text="@string/album"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/albumTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:text="@string/one_more_light_live"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/albumTextTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/executorTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#808080"
        android:text="@string/executor"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/albumTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/executorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/linkin_park"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/albumTitle"
        app:layout_constraintStart_toEndOf="@id/executorTextTitle" />

    <TextView
        android:id="@+id/yearText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#808080"
        android:text="@string/_2017"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/executorTextTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#808080"
        android:text="@string/alternative"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/executorTextTitle"
        app:layout_constraintStart_toEndOf="@id/yearText" />

    <!-- Здесь поменял иконку на selector, чтобы состояния менялись -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/play"
        android:checkable="true"
        app:icon="@drawable/ic_play_selector"
        app:backgroundTint="#ffd54f"
        app:iconSize="40dp"
        app:iconTint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yearText"
        style="@style/App.Widget.PlayButton" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="15dp"
        app:constraint_referenced_ids="play" />

    <!-- Здесь высота была wrap_content и не было привязки низа. Из-за этого часть треков не было видно в списке -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/vision_song" />

</androidx.constraintlayout.widget.ConstraintLayout>