<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/song"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/play"
        android:checkable="true"
        app:icon="@drawable/ic_play_selector"
        app:backgroundTint="#ffd54f"
        app:iconSize="20dp"
        app:iconTint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/App.Widget.PlayButton" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/alternative"
        android:textStyle="bold"
        android:layout_marginTop="18dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/play"
        tools:text="Talking to Myself"/>

    <TextView
        android:id="@+id/timeSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/alternative"
        android:textStyle="bold"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="15dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="4:13"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/play"
        app:icon="@drawable/ic_menu_horizontal_48"
        app:iconSize="20dp"
        app:iconTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/App.Widget.PlayButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:checkable="true"
        android:contentDescription="@string/share"
        app:icon="@drawable/ic_share_48"
        app:iconPadding="4dp"
        app:iconTint="@color/color_share_selector"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/App.Widget.ShareButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:checkable="true"
        android:contentDescription="@string/like"
        app:icon="@drawable/ic_like_selector_48"
        app:iconPadding="4dp"
        app:iconTint="@color/color_like_selector"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/share"
        style="@style/App.Widget.LikeButton" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="like, share" />

</androidx.constraintlayout.widget.ConstraintLayout>